--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,18 +1,32 @@
 <nav class="{% if page.title == "Home" %}nav-home{% else %}nav{% endif %}">
     <ul class="list">
+	
+	{% if page.title != "Home" %}
+            <li class="item">
+                <a class="link" href="{{ site.url }}/">Home</a>
+            </li>
+        {% endif %}
+
+
         
 	{% if site.about == true %}
             {% if page.title != "About" %}
                 <li class="item">
                     <a class="link" href="{{ site.url }}/about">About</a>
                 </li>
+            {% endif %}
         {% endif %}
-        {% endif %}	
-	{% if page.title != "Home" %}
-            <li class="item">
-                <a class="link" href="{{ site.url }}/">Home</a>
-            </li>
+
+
+	{% if site.research == true %}
+            {% if page.title != "Research" %}
+                <li class="item">
+                    <a class="link" href="{{ site.url }}/research">Research</a>
+                </li>
+            {% endif %}
         {% endif %}
+
+
 
         {% if site.blog == true %}
             {% if page.title != "Blog" %}
